--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ Wayamba University of Sri Lanka</em>
 
   <!-- Pricing -->
 
-  <section id="pricing">
+<!--   <section id="pricing">
 
     <h2 class="section-heading">A Plan for Everyone</h2>
     <p>Simple and affordable price plans for your with more feature.</p>
@@ -260,7 +260,7 @@ Wayamba University of Sri Lanka</em>
       <button class="btn btn-dark btn-lg download-button" type="button"><i class="fab fa-apple"></i> Download</button>
       <button class="btn btn-light btn-lg download-button" type="button"><i class="fab fa-google-play"></i> Download</button>
     </div>
-  </section>
+  </section> -->
 
 
   <!-- Footer -->
