--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@ Wayamba University of Sri Lanka</em>
 
   <section id="press">
     <img class="press-logo" src="images/futuregenlabs.png" alt="fgl-logo">
-    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+<!--     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
+    <img class="press-logo" src="images/mashable.png" alt="mashable-logo"> -->
 
   </section>
 
@@ -268,8 +268,8 @@ Wayamba University of Sri Lanka</em>
   <footer id="footer">
     <div class="container-fluid">
       <a href="https://www.youtube.com/channel/UC_B6PoKqoY04-KbU8Iu1k6g" target="_blank"><i class="btn social-icon fab fa-youtube"></i></a>
-      <a href="https://www.youtube.com/channel/UC_B6PoKqoY04-KbU8Iu1k6g" target="_blank"><i class="btn social-icon fab fa-facebook-f"></i></a>
-      <a href="https://www.youtube.com/channel/UC_B6PoKqoY04-KbU8Iu1k6g" target="_blank"><i class="btn social-icon fab fa-instagram"></i></a>
+      <a href="https://www.facebook.com/Healthy-Foods-107676938322921" target="_blank"><i class="btn social-icon fab fa-facebook-f"></i></a>
+      <a href="https://www.instagram.com/invites/contact/?i=19oyl8liakjdb&utm_content=mq3uytq" target="_blank"><i class="btn social-icon fab fa-instagram"></i></a>
       <a href="mailto: healthy.foods.susl@gmail.com"><i class="btn social-icon fas fa-envelope"></i></a>
       <p>© Copyright 2021 HealthyFoods</p>
     </div>
