--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ Wayamba University of Sri Lanka</em>
       <button class="btn btn-dark btn-lg download-button" type="button"><i class="fab fa-apple"></i> Download</button>
       <button class="btn btn-light btn-lg download-button" type="button"><i class="fab fa-google-play"></i> Download</button>
     </div>
-  </section> -->
+  </section>
 
 
   <!-- Footer -->
