--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ Wayamba University of Sri Lanka</em>
       <a href="https://www.facebook.com/Healthy-Foods-107676938322921" target="_blank"><i class="btn social-icon fab fa-facebook-f"></i></a>
       <a href="https://www.instagram.com/invites/contact/?i=19oyl8liakjdb&utm_content=mq3uytq" target="_blank"><i class="btn social-icon fab fa-instagram"></i></a>
       <a href="mailto: healthy.foods.susl@gmail.com"><i class="btn social-icon fas fa-envelope"></i></a>
-      <p>© Copyright 2021 HealthyFoods</p>
+      <p><a href="privacyPolicy.html">© Copyright 2021 HealthyFoods</a></p>
     </div>
   </footer>
 
