--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Privacy Policy for JSELabs</h1>
 
-<p>At Healthy Foods, accessible from www.examplabc.lk, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Healthy Foods and how we use it.</p>
+<p>At Healthy Foods, accessible from https://healthyfoods-jselabs.github.io/HealthyFoods.Web/, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Healthy Foods and how we use it.</p>
 
 <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
 
