--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <h2 class="testimonial-text">This is a required mobile application for the world and its vision is great to protect the next generation from harmful food ingredients. People will motivate to be aware of their healthy foods with this
             application.</h2>
           <em>J.I.Chinthaka<br />
-            Founder at FutureGenLabs</em>
+            Software Engineer at Sutra Technology</em>
         </div>
         <div class="carousel-item container-fluid">
           <h2 class="testimonial-text">These days most of the people are used to buy each & every food items, also there are different types of food with or without standard qualities.
