--- a/index.html
+++ b/index.html
@@ -143,6 +143,15 @@
           <em>J.I.Chinthaka<br />
             Software Engineer at Sutra Technology</em>
         </div>
+        
+        <div class="carousel-item container-fluid">
+          <h2 class="testimonial-text">Labelling of packeted food is a legal requirement in Sri Lanka. However, customers of the existing market are   highly careless on information on labels. Hence, this application is valuable to the customers to identify unhealthy foods. Further this application will indeed a valuable tool for new information.
+          </h2>
+          <em>D.M.R.D. Dhanapala
+            <br />
+           Principal, National Institute Of Health Sciences, Kalutara</em>
+        </div>
+        
         <div class="carousel-item container-fluid">
           <h2 class="testimonial-text">These days most of the people are used to buy each & every food items, also there are different types of food with or without standard qualities.
             We can ditect that those products are harmful or not to our health by using this app very easily.
