--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="col-lg-6">
           <h1 class="big-heading">The greatest wealth </br>is health.</h1>
           <button class="btn btn-dark btn-lg download-button" type="button"><i class="fab fa-apple"></i> Download</button>
-          <button herf="https://play.google.com/store/apps/details?id=com.healthyfoodsjselabs" class="btn btn-outline-light btn-lg download-button" type="button"><i class="fab fa-google-play"></i> Download</button>
+          <button href="https://play.google.com/store/apps/details?id=com.healthyfoodsjselabs" class="btn btn-outline-light btn-lg download-button" type="button"><i class="fab fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6">
           <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
@@ -267,7 +267,7 @@ Wayamba University of Sri Lanka</em>
     <div class="container-fluid">
       <h3 class="cta-heading">Be aware of what you eat before purchasing.</h3>
       <button class="btn btn-dark btn-lg download-button" type="button"><i class="fab fa-apple"></i> Download</button>
-      <button class="btn btn-light btn-lg download-button" type="button"><i class="fab fa-google-play"></i> Download</button>
+      <button href="https://play.google.com/store/apps/details?id=com.healthyfoodsjselabs" class="btn btn-light btn-lg download-button" type="button"><i class="fab fa-google-play"></i> Download</button>
     </div>
   </section>
 
