--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <img src="images/family.svg" class="purpose-icon" />
         </div>
         <div class="col-lg-9 col-md-9 col-sm-12 purpose-title-div">
-          <h2 class="purpose-title">We are going to reduce the number cancer patients in Sri Lanka.</h2>
+          <h2 class="purpose-title">We are going to reduce the number of cancer patients in Sri Lanka.</h2>
         </div>
       </div>
       <div class="row purpose-item purpose-item-down">
