--- a/index.html
+++ b/index.html
@@ -199,10 +199,8 @@ Wayamba University of Sri Lanka</em>
   <!-- Press -->
 
   <section id="press">
-<!--     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-logo" src="images/mashable.png" alt="mashable-logo"> -->
-
+    <img class="press-logo" src="images/SUVANA.png" alt="Suvana-logo">
+    <img class="press-logo" src="images/futureGen.png" alt="futureGen-logo">
   </section>
 
 
