--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ Wayamba University of Sri Lanka</em>
   <!-- Press -->
 
   <section id="press">
-    <img class="press-logo suvana-img" src="images/SUVANA.png" alt="Suvana-logo">
+    <img class="press-logo" src="images/SUVANA.png" alt="Suvana-logo">
     <img class="press-logo" src="images/futureGen.png" alt="futureGen-logo">
   </section>
 
