--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ Wayamba University of Sri Lanka</em>
 
   <!-- Press -->
 
-  <section id="press">
+  <section id="footer">
     <img class="press-logo" src="images/SUVANA.png" alt="Suvana-logo">
     <img class="press-logo" src="images/futureGen.png" alt="futureGen-logo">
   </section>
