--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@ Wayamba University of Sri Lanka</em>
   <!-- Press -->
 
   <section id="footer">
+    <h3 style="color:#399594;" class="cta-heading">sponsored by</h3>
     <img class="press-logo" src="images/SUVANA.png" alt="Suvana-logo">
     <img class="press-logo" src="images/futureGen.png" alt="futureGen-logo">
   </section>
