--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="col-lg-6">
           <h1 class="big-heading">The greatest wealth </br>is health.</h1>
           <button class="btn btn-dark btn-lg download-button" type="button"><i class="fab fa-apple"></i> Download</button>
-          <a href="https://play.google.com/store/apps/details?id=com.healthyfoodsjselabs" class="btn btn-outline-light btn-lg download-button" type="button">
+          <a href="https://play.google.com/store/apps/details?id=com.healthyfoodsjselabs" target="_blank" class="btn btn-outline-light btn-lg download-button" type="button">
                       <i class="fab fa-google-play"></i> 
 <!--                                 <a href="https://play.google.com/store/apps/details?id=com.healthyfoodsjselabs" class="btn btn-outline-light btn-lg download-button"> -->
 
