--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ Wayamba University of Sri Lanka</em>
     <div class="container-fluid">
       <h3 class="cta-heading">Be aware of what you eat before purchasing.</h3>
       <button class="btn btn-dark btn-lg download-button" type="button"><i class="fab fa-apple"></i> Download</button>
-      <button href="https://play.google.com/store/apps/details?id=com.healthyfoodsjselabs" class="btn btn-light btn-lg download-button" type="button"><i class="fab fa-google-play"></i> Download</button>
+      <a href="https://play.google.com/store/apps/details?id=com.healthyfoodsjselabs" class="btn btn-light btn-lg download-button" type="button"><i class="fab fa-google-play"></i> Download</a>
     </div>
   </section>
 
